--- a/SpicyCo/client/src/app/app.component.html
+++ b/SpicyCo/client/src/app/app.component.html
@@ -1,3 +1,6 @@
+<body>
+    <app-nav-menu></app-nav-menu>    
+    <router-outlet></router-outlet>
+</body>
 
-<router-outlet></router-outlet>
-<app-products></app-products>
+
