--- a/SpicyCo/client/src/app/products/products/products.component.html
+++ b/SpicyCo/client/src/app/products/products/products.component.html
@@ -1,3 +1,15 @@
-<p *ngFor="let pro of product">
-  {{pro.name}}, {{pro.description}}, {{pro.price}}
-</p>
+<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    
+    <div>
+      <p *ngFor="let pro of product">
+        {{pro.name}}, {{pro.description}}, {{pro.price}}
+      </p>
+    </div>
+    
+  </div>
+
+  <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+
+  
+</main>
